--- a/package.json
+++ b/package.json
@@ -18,11 +18,21 @@
   },
   "homepage": "https://github.com/NadaAhmedSaleh/ts-contact-book#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/config": "^3.3.0",
     "@types/express": "^4.17.17",
+    "@types/google-libphonenumber": "^7.4.24",
+    "@types/jsonwebtoken": "^9.0.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
+    "google-libphonenumber": "^3.2.32",
+    "jsonwebtoken": "^9.0.1",
+    "rand-token": "^1.0.1"
   }
 }
