--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.17",
     "@types/google-libphonenumber": "^7.4.24",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.196",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -33,6 +34,7 @@
     "config": "^3.3.9",
     "google-libphonenumber": "^3.2.32",
     "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "rand-token": "^1.0.1"
   }
 }
