--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "google-libphonenumber": "^3.2.32",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "rand-token": "^1.0.1"
   }
 }
