--- a/package.json
+++ b/package.json
@@ -19,20 +19,25 @@
   "homepage": "https://github.com/NadaAhmedSaleh/ts-contact-book#readme",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/config": "^3.3.0",
     "@types/express": "^4.17.17",
     "@types/google-libphonenumber": "^7.4.24",
+    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.196",
     "express": "^4.18.2",
+    "google-libphonenumber": "^3.2.32",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
-    "google-libphonenumber": "^3.2.32",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
