--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.196",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "express": "^4.18.2",
     "google-libphonenumber": "^3.2.32",
     "jest": "^29.6.2",
@@ -41,6 +43,8 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "rand-token": "^1.0.1"
+    "rand-token": "^1.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
